# WorkAware

./: .gitignore  README.md  database.py  devices.db  main.py  pyproject.toml  requirements.txt
Docs/: Documentación Técnica WorkAware.docx
Documentacion/: Documentación Técnica WorkAware.docx
Interface/: add_update_screen.py  expand_task_screen.py  main_screen.py
app/: db_actions.py  notifier.py  posture_monitor.py  session_logger.py
core/: db_actions.py  notifier.py  posture_monitor.py  session_loggin.py
detector/: detector.py
models/: task.py
structures/: task.py
