[project]
name = "workaware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Juan David Rivaldo Diaz Sierra", email = "juandavidrivaldo@gmail.com" }
]
dependencies = [
    "certifi>=2025.4.26",
    "flet>=0.28.3",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "plyer>=2.1.0",
    "pygame>=2.6.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "flet[all]>=0.28.3",
]
